--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "alertme-component-angular-lib-app": {
+    "alertme-component-angular-app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/alertme-component-angular-lib-app",
+            "outputPath": "dist/alertme-component-angular-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/dropdown.theme.css"
             ],
             "scripts": []
           },
@@ -57,18 +58,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "alertme-component-angular-lib-app:build"
+            "browserTarget": "alertme-component-angular-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "alertme-component-angular-lib-app:build:production"
+              "browserTarget": "alertme-component-angular-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "alertme-component-angular-lib-app:build"
+            "browserTarget": "alertme-component-angular-app:build"
           }
         },
         "test": {
@@ -102,7 +103,7 @@
         }
       }
     },
-    "alertme-component-angular-lib-app-e2e": {
+    "alertme-component-angular-app-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -111,11 +112,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "alertme-component-angular-lib-app:serve"
+            "devServerTarget": "alertme-component-angular-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "alertme-component-angular-lib-app:serve:production"
+              "devServerTarget": "alertme-component-angular-app:serve:production"
             }
           }
         },
@@ -129,7 +130,42 @@
           }
         }
       }
+    },
+    "alertme-component-angular": {
+      "root": "projects/alertme-component-angular",
+      "sourceRoot": "projects/alertme-component-angular/src",
+      "projectType": "library",
+      "prefix": "am",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/alertme-component-angular/tsconfig.lib.json",
+            "project": "projects/alertme-component-angular/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/alertme-component-angular/src/test.ts",
+            "tsConfig": "projects/alertme-component-angular/tsconfig.spec.json",
+            "karmaConfig": "projects/alertme-component-angular/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/alertme-component-angular/tsconfig.lib.json",
+              "projects/alertme-component-angular/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
-  "defaultProject": "alertme-component-angular-lib-app"
+  "defaultProject": "alertme-component-angular-app"
 }
